[gd_scene load_steps=6 format=3 uid="uid://73qmg0h8b3e2"]

[ext_resource type="Script" path="res://scripts/area/tile_map_level.gd" id="1_hs2e2"]
[ext_resource type="MeshLibrary" uid="uid://c62scvx55tx5t" path="res://resources/mesh_libraries/floor_mesh_library_2.tres" id="2_waeo4"]
[ext_resource type="MeshLibrary" uid="uid://br1ri42vxlwcr" path="res://resources/mesh_libraries/wall_tile_mesh_library.tres" id="3_5ikk3"]
[ext_resource type="MeshLibrary" uid="uid://bymcfwd8rntul" path="res://resources/mesh_libraries/fog_of_war_mesh_library.tres" id="4_f04o0"]
[ext_resource type="Script" path="res://scripts/area/fog_of_war.gd" id="5_svgrd"]

[node name="TileMapLevel" type="Node3D"]
script = ExtResource("1_hs2e2")
level_endpoints = Array[Vector2i]([Vector2i(0, 0)])

[node name="LevelFloor" type="GridMap" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh_library = ExtResource("2_waeo4")
data = {
"cells": PackedInt32Array(0, 0, 3, 0, 65535, 2, 65535, 65535, 0, 65535, 0, 1, 1, 65535, 4, 1, 0, 5, 1, 1, 6, 0, 1, 8, 65535, 1, 9, 65534, 1, 10, 65534, 0, 11, 65534, 65535, 12, 65534, 65534, 12, 65535, 65534, 12, 0, 65534, 12, 1, 65534, 12)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="LevelWall" type="GridMap" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh_library = ExtResource("3_5ikk3")
data = {
"cells": PackedInt32Array(0, 2, 0, 1, 2, 0, 2, 2, 0, 2, 1, 0, 2, 0, 0, 2, 65535, 0, 65533, 65534, 0, 65533, 1, 0, 65533, 2, 0, 65533, 0, 0, 65534, 2, 0, 65534, 3, 0, 65534, 4, 0, 65534, 5, 0, 0, 5, 0, 0, 4, 0, 0, 3, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 5, 4, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 8, 4, 0, 8, 5, 0, 7, 8, 0, 6, 8, 0, 5, 8, 0, 8, 8, 0, 8, 7, 0, 8, 6, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 65534, 7, 0, 65534, 8, 0, 65534, 9, 0, 65534, 10, 0, 65534, 11, 0, 65534, 12, 0, 65535, 12, 0, 0, 12, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 5, 11, 0, 5, 10, 0, 4, 10, 0, 3, 10, 0, 2, 10, 0, 1, 10, 0, 65533, 7, 0, 65532, 7, 0, 65531, 7, 0, 65530, 7, 0, 65533, 5, 0, 65532, 5, 0, 65531, 5, 0, 65530, 5, 0, 65530, 4, 0, 65529, 7, 0, 65528, 7, 0, 65528, 6, 0, 65528, 5, 0, 65528, 4, 0, 65528, 3, 0, 65528, 2, 0, 65528, 1, 0, 65528, 0, 0, 65528, 65535, 0, 65529, 65534, 0, 65532, 65534, 0, 65531, 65534, 0, 65530, 65534, 0, 65530, 3, 0, 65530, 2, 0, 65530, 1, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 2, 65534, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, 0, 5, 65533, 0, 6, 65533, 0, 6, 65534, 0, 7, 65533, 0, 7, 65534, 0, 8, 65534, 0, 65533, 65533, 0, 65533, 65532, 0, 65533, 65531, 0, 65533, 65530, 0, 65533, 65529, 0, 65533, 65528, 0, 65534, 65528, 0, 65534, 65527, 0, 65534, 65526, 0, 65534, 65525, 0, 65534, 65524, 0, 65535, 65524, 0, 0, 65524, 0, 1, 65524, 0, 2, 65524, 0, 3, 65524, 0, 6, 65524, 0, 6, 65525, 0, 7, 65525, 0, 8, 65526, 0, 9, 65526, 0, 9, 65527, 0, 10, 65527, 0, 10, 65528, 0, 11, 65528, 0, 11, 65529, 0, 11, 65530, 0, 12, 65530, 0, 12, 65531, 0, 12, 65532, 0, 12, 65533, 0, 12, 65534, 0, 12, 65535, 0, 11, 65535, 0, 11, 0, 0, 10, 0, 0, 10, 65535, 0, 9, 65535, 0, 6, 65523, 0, 6, 65522, 0, 6, 65521, 0, 6, 65520, 0, 6, 65519, 0, 5, 65519, 0, 5, 65518, 0, 6, 65518, 0, 4, 65518, 0, 3, 65518, 0, 2, 65518, 0, 1, 65518, 0, 0, 65518, 0, 0, 65519, 0, 65535, 65519, 0, 65534, 65519, 0, 65533, 65519, 0, 65533, 65520, 0, 65532, 65520, 0, 65531, 65520, 0, 65531, 65521, 0, 65530, 65521, 0, 65530, 65522, 0, 65529, 65522, 0, 65529, 65523, 0, 65528, 65523, 0, 65528, 65524, 0, 65528, 65525, 0, 65528, 65526, 0, 65528, 65527, 0, 65528, 65528, 0, 65528, 65529, 0, 65528, 65530, 0, 65528, 65531, 0, 65528, 65532, 0, 65527, 65532, 0, 65526, 65532, 0, 65525, 65532, 0, 65524, 65532, 0, 65523, 65532, 0, 65522, 65532, 0, 65522, 65533, 0, 65522, 65534, 0, 65522, 65535, 0, 65522, 0, 0, 65522, 1, 0, 65522, 2, 0, 65522, 3, 0, 65522, 4, 0, 65523, 4, 0, 65524, 4, 0, 65525, 4, 0, 65526, 4, 0, 65527, 4, 0, 4, 65528, 0, 4, 65529, 0, 3, 65529, 0, 3, 65530, 0, 4, 65530, 0, 2, 65529, 0, 2, 65528, 0, 3, 65528, 0, 2, 65530, 0, 65525, 12, 0, 65526, 13, 0, 65525, 14, 0, 65524, 13, 0)
}

[node name="FogOfWar" type="GridMap" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh_library = ExtResource("4_f04o0")
script = ExtResource("5_svgrd")
